Advance Approval/force-app/main/default/objects/Approval_Condition__c/Approval_Condition__c.object-meta.xml
<CustomObject>
    <label>Approval Condition</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Approval Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>