Advance Approval/force-app/main/default/objects/Approval_Condition__c/fields/Approval_Framework_Config__c.field-meta.xml
<CustomField>
    <fullName>Approval_Framework_Config__c</fullName>
    <label>Approval Framework Config</label>
    <referenceTo>Approval_Framework_Config__c</referenceTo>
    <relationshipLabel>Approval Conditions</relationshipLabel>
    <relationshipName>Approval_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>