Advance Approval/force-app/main/default/objects/Approval_Condition__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>