Advance Approval/force-app/main/default/objects/Approval_Condition__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <label>Values</label>
    <length>100</length>
    <type>Text</type>
</CustomField>